--- a/MALViewer/angular.json
+++ b/MALViewer/angular.json
@@ -29,9 +29,8 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.scss"
-            ],
+
+            "stylePreprocessorOptions": { "includePaths": [ "src/assets/styles" ] },
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
