--- a/MALViewer/tsconfig.spec.json
+++ b/MALViewer/tsconfig.spec.json
@@ -6,7 +6,13 @@
     "outDir": "./out-tsc/spec",
     "types": [
       "jasmine"
-    ]
+    ],
+    "baseUrl": "src",
+    "paths": {
+      "@app/*": [
+        "app/*",
+      ],
+    },
   },
   "include": [
     "src/**/*.ts"
