--- a/MALViewer/angular.json
+++ b/MALViewer/angular.json
@@ -30,7 +30,7 @@
               }
             ],
 
-            "stylePreprocessorOptions": { "includePaths": [ "src/assets/styles" ] },
+            "stylePreprocessorOptions": {  "includePaths": ["src/app/assets/styles"] },
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
