--- a/MALViewer/angular.json
+++ b/MALViewer/angular.json
@@ -29,7 +29,7 @@
                 "input": "public"
               }
             ],
-
+            "outputPath": "dist/MALViewer",
             "stylePreprocessorOptions": {  "includePaths": ["src/app/assets/styles"] },
             "server": "src/main.server.ts",
             "outputMode": "server",
@@ -95,6 +95,9 @@
               "src/styles.scss"
             ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
