--- a/MALViewer/angular.json
+++ b/MALViewer/angular.json
@@ -29,7 +29,7 @@
                 "input": "public"
               }
             ],
-            "outputPath": "dist/MALViewer",
+            "outputPath": "dist/MALviewer",
             "stylePreprocessorOptions": {  "includePaths": ["src/app/assets/styles"] },
             "server": "src/main.server.ts",
             "outputMode": "server",
