mal-auth: add backend, run requests through BE

--- a/MALViewer/tsconfig.json
+++ b/MALViewer/tsconfig.json
@@ -16,6 +16,7 @@
     "module": "preserve",
     "baseUrl": "src",
     "paths": {
+      "@app/*": ["app/*"],
       "@shared/*": ["app/shared/*"],
       "@components/*": ["app/shared/components/*"],
       "@services/*": ["app/shared/components/*"],
